--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background: linear-gradient(to bottom right, #1976d2, #42a5f5);
+  background: linear-gradient(to bottom right, #cadef0, #efeff0);
 }
 
 .auth-card {
@@ -34,7 +34,7 @@
 }
 
 .switch-link {
-  color: #e1ebf5;
+  color: #1976d2;
   font-weight: 500;
   cursor: pointer;
   &:hover {
